force-app/main/default/objects/Product2/fields/End_of_life__c.field-meta.xml
<CustomField>
    <fullName>End_of_life__c</fullName>
    <label>Caducidad</label>
    <type>Date</type>
</CustomField>