force-app/main/default/objects/Product2/fields/Product_Code_Vindicia__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Vindicia__c</fullName>
    <externalId>true</externalId>
    <label>Product Code Vindicia</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>