force-app/main/default/objects/Product2/fields/Product_price__c.field-meta.xml
<CustomField>
    <fullName>Product_price__c</fullName>
    <label>Product price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>