force-app/main/default/objects/Product2/recordTypes/Producto_mensual.recordType-meta.xml
<RecordType>
    <fullName>Producto_mensual</fullName>
    <active>true</active>
    <label>Producto mensual</label>
</RecordType>