force-app/main/default/objects/Product2/recordTypes/TVOD.recordType-meta.xml
<RecordType>
    <fullName>TVOD</fullName>
    <active>true</active>
    <label>TVOD</label>
</RecordType>